Fix graphql in test